--- a/aquacontrol-front/public/example/app.html
+++ b/aquacontrol-front/public/example/app.html
@@ -7,31 +7,22 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-
-  <link rel="stylesheet" href="css/login.css" crossorigin="anonymous">
 </head>
 <body>
-  <div class="container ">
-    <form class="">
-      <h2>Inicio de sesión</h2>
-      
-      <div class="form-group">
-        <label for="inputEmail" class="sr-only">Correo</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Correo" required autofocus>
+  <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="#">Aquacontrol</a>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="#">Pedidos <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="#">Lista</a>
+        <a class="nav-item nav-link" href="#">Empleados</a>
+        <a class="nav-item nav-link" href="#">Garrafones</a>
       </div>
-
-      <div class="form-group">
-        <label for="inputPassword" class="sr-only">Contraseña</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required>
-      </div>
-
-      <div class="form-group">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Iniciar</button>
-      </div>
-
-    </form>
-  </div> <!-- /container -->
-
+    </div>
+  </nav>
 
 
   <!-- jQuery first, then Tether, then Bootstrap JS. -->
