--- a/aquacontrol-front/public/index.html
+++ b/aquacontrol-front/public/index.html
@@ -25,6 +25,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/font-awesome.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/index.css">
   </head>
   <body>
     <div id="root"></div>
